--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,9 @@
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
-  color: white;
 }
 body{
+  color: white;
   overflow-x:hidden;
 }
 li{
@@ -24,10 +24,14 @@ li{
 .desktop-hover-effect li a{
   position: relative;
 }
+/* 
+ clientId: "52cea5ec58604ca3b30e63bfef674d16";
+ clientSecretId: "bb6f073184b74017878cdb5daf55d786"
+*/
 .desktop-hover-effect li  a::after{
   content: '';
   width: 100%;
-  height: 2px;
+  height: 1px;
   background-color: #fff;
   position: absolute;
   left:0;
@@ -45,4 +49,30 @@ li{
   html{
     font-size: 14px;
   }
+}
+
+/* Swiper */
+.swiper-button-next, .swiper-button-prev {
+  background-color: rgba(1, 1, 1, 0.5);
+  border-radius: 50%; 
+  width: 40px;
+  height: 40px;
+  color: rgb(2, 2, 2); 
+}
+.swiper-button-next:hover, .swiper-button-prev:hover {
+  background-color: rgba(47, 33, 33, 0.8);
+  color: black;
+}
+
+.swiper-pagination-bullet {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 12px;
+  height: 12px;
+  opacity: 1;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #ff6347; 
+  width: 14px;
+  height: 14px;
 }
