--- a/src/index.css
+++ b/src/index.css
@@ -55,8 +55,8 @@ li{
 .swiper-button-next, .swiper-button-prev {
   background-color: rgba(1, 1, 1, 0.5);
   border-radius: 50%; 
-  width: 40px;
-  height: 40px;
+  width: 100px;
+  height: 80px;
   color: rgb(2, 2, 2); 
 }
 .swiper-button-next:hover, .swiper-button-prev:hover {
@@ -66,8 +66,8 @@ li{
 
 .swiper-pagination-bullet {
   background-color: rgba(0, 0, 0, 0.5);
-  width: 12px;
-  height: 12px;
+  width: 22px;
+  height:12px;
   opacity: 1;
 }
 
@@ -75,4 +75,92 @@ li{
   background-color: #ff6347; 
   width: 14px;
   height: 14px;
+}
+@media (min-width:758px) {
+  .swiper-button-next, .swiper-button-prev{
+    display: none;
+  }
+}
+
+/* Price Range Component */
+.slider-container {
+  position: relative;
+  width: 80%;
+  height: 50px;
+}
+
+input[type="range"] {
+  position: absolute;
+  -webkit-appearance: none;
+  width: 100%;
+  height: 0;
+  pointer-events: none;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  background: #000;
+  /* box-shadow: #ddd; */
+  /* margin-right: 20px; */
+  top: 5px;
+  
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+  pointer-events: all;
+  position: relative;
+}
+
+.slider {
+  position: relative;
+  height: 10px;
+  margin: 20px 0;
+}
+
+.slider-track {
+  position: absolute;
+  background: #ddd;
+  height: 80%;
+  width: 100%;
+  z-index: 1;
+  box-sizing: border-box;
+}
+
+.slider-range {
+  box-sizing: border-box;
+  position: absolute;
+  background: rgb(100, 48, 48);
+  height: 100%;
+  z-index: 2;
+}
+
+.thumb {
+  z-index: 3;
+  width: 80px;
+  height: 80px;
+}
+
+.thumb-left {
+  z-index: 4;
+}
+
+.thumb-right {
+  z-index: 5;
+}
+
+.slider-left-value,
+.slider-right-value {
+  position: absolute;
+  top: -30px;
+  font-size: 12px;
+}
+.slider-left-value {
+  left: 0;
+}
+
+.slider-right-value {
+  right: 0;
 }
