--- a/src/index.css
+++ b/src/index.css
@@ -198,3 +198,83 @@ input[type="range"]::-webkit-slider-thumb {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
   transition: all 0.3s;
 }
+input[type="checkbox"]{
+  -webkit-appearance: none;
+   padding: 0;
+  width: 20px;
+  height: 20px;
+  border: 1px solid gray;
+  border-radius: 4px;
+  position:relative;
+}
+input[type="checkbox"]::after{
+ position: absolute;
+ z-index: 99;
+ background-color: rgba(16, 16, 240, 0.681);
+ width: 100%;
+ height: 100%;
+ top: 50%;
+left: 50%;
+transform: translate(-50%,-50%) scale(0);
+transition: transfrom 0.3s;
+
+}
+input[type="checkbox"]:hover::after{
+    transform: scale(1.5);
+}
+
+input[type="checkbox"]:checked{
+  background-color: blue;
+}
+
+
+
+input[type="checkbox"] {
+  -webkit-appearance: none;
+  padding: 0;
+  width: 20px;
+  height: 20px;
+  border: 1px solid gray;
+  border-radius: 4px;
+  position: relative;
+  background-color: white;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  z-index: 2;
+}
+
+input[type="checkbox"]::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+ background-color: transparent;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 0.3s ease , background;
+  border-radius: 4px;
+  will-change: transfrom;
+  border: none;
+};
+input[type="chekbox"]:hover{
+  /* border:1px solid rgb(45, 45, 187); */
+  border: transparent;
+}
+
+input[type="checkbox"]:hover::after {
+  transform: translate(-50%, -50%) scale(1.5);
+  /* background-color: rgba(38, 38, 161, 0.464);  */
+  border: 2px solid darkblue;
+
+}
+
+input[type="checkbox"]:checked {
+  background-color: blue; 
+  /* border-color: blue; */
+}
+
+input[type="checkbox"]:checked::after {
+  transform: translate(-50%, -50%) scale(1); 
+}
