Refactor the code to make it more reusable and Handle Dynamic routing more efficiently

--- a/src/index.css
+++ b/src/index.css
@@ -278,3 +278,6 @@ input[type="checkbox"]:checked {
 input[type="checkbox"]:checked::after {
   transform: translate(-50%, -50%) scale(1); 
 }
+.sold-out-tag{
+  clip-path: polygon(0 20%, 68% 19%, 100% 50%, 68% 84%, 0 85%);
+}
