--- a/src/index.css
+++ b/src/index.css
@@ -198,7 +198,7 @@ input[type="range"]::-webkit-slider-thumb {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
   transition: all 0.3s;
 }
-input[type="checkbox"]{
+/* input[type="checkbox"]{
   -webkit-appearance: none;
    padding: 0;
   width: 20px;
@@ -259,25 +259,22 @@ input[type="checkbox"]::after {
   border: none;
 };
 input[type="chekbox"]:hover{
-  /* border:1px solid rgb(45, 45, 187); */
   border: transparent;
 }
 
 input[type="checkbox"]:hover::after {
   transform: translate(-50%, -50%) scale(1.5);
-  /* background-color: rgba(38, 38, 161, 0.464);  */
   border: 2px solid darkblue;
 
 }
 
 input[type="checkbox"]:checked {
   background-color: blue; 
-  /* border-color: blue; */
 }
 
 input[type="checkbox"]:checked::after {
   transform: translate(-50%, -50%) scale(1); 
-}
+} */
 .sold-out-tag{
   clip-path: polygon(0 20%, 68% 19%, 100% 50%, 68% 84%, 0 85%);
 }
