--- a/src/index.css
+++ b/src/index.css
@@ -198,6 +198,12 @@ input[type="range"]::-webkit-slider-thumb {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
   transition: all 0.3s;
 }
+.hover-effect-bread-crums {
+  text-decoration: underline 1px solid rgb(46, 46, 168);
+}
+.hover-effect-bread-crums:hover{
+  color: #302b2b;
+}
 /* input[type="checkbox"]{
   -webkit-appearance: none;
    padding: 0;
